--- a/CrmCompModelShop/Crm.BL/Crm.BL.csproj
+++ b/CrmCompModelShop/Crm.BL/Crm.BL.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Model\AbstractPerson.cs" />
     <Compile Include="Model\Cheque.cs" />
     <Compile Include="Model\CrmContext.cs" />
     <Compile Include="Model\Customer.cs" />
