--- a/CrmCompModelShop/Crm.UI/Crm.UI.csproj
+++ b/CrmCompModelShop/Crm.UI/Crm.UI.csproj
@@ -56,25 +56,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Catalogue.cs">
+    <Compile Include="Forms\CatalogueForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Catalogue.Designer.cs">
-      <DependentUpon>Catalogue.cs</DependentUpon>
+    <Compile Include="Forms\CatalogueForm.Designer.cs">
+      <DependentUpon>CatalogueForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main.cs">
+    <Compile Include="Forms\CustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
-      <DependentUpon>Main.cs</DependentUpon>
+    <Compile Include="Forms\CustomerForm.Designer.cs">
+      <DependentUpon>CustomerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Catalogue.resx">
-      <DependentUpon>Catalogue.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\CatalogueForm.resx">
+      <DependentUpon>CatalogueForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
-      <DependentUpon>Main.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\CustomerForm.resx">
+      <DependentUpon>CustomerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
