--- a/CrmCompModelShop/Crm.UI/Crm.UI.csproj
+++ b/CrmCompModelShop/Crm.UI/Crm.UI.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Forms\CatalogueForm.Designer.cs">
       <DependentUpon>CatalogueForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SellerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SellerForm.Designer.cs">
+      <DependentUpon>SellerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\CustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\CatalogueForm.resx">
       <DependentUpon>CatalogueForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SellerForm.resx">
+      <DependentUpon>SellerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
