--- a/CrmCompModelShop/Crm.BL/Crm.BL.csproj
+++ b/CrmCompModelShop/Crm.BL/Crm.BL.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\Seller.cs" />
+    <Compile Include="Model\ShoppingCart.cs" />
     <Compile Include="Model\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
