--- a/CrmCompModelShop/Crm.BLTests/Crm.BLTests.csproj
+++ b/CrmCompModelShop/Crm.BLTests/Crm.BLTests.csproj
@@ -56,6 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Model\CashDeskTests.cs" />
     <Compile Include="Model\ShoppingCartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
