--- a/CrmCompModelShop/Crm.BL/Crm.BL.csproj
+++ b/CrmCompModelShop/Crm.BL/Crm.BL.csproj
@@ -57,8 +57,10 @@
     <Compile Include="Model\Cheque.cs" />
     <Compile Include="Model\CrmContext.cs" />
     <Compile Include="Model\Customer.cs" />
+    <Compile Include="Model\Generator.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\Seller.cs" />
+    <Compile Include="Model\ShopComputerModel.cs" />
     <Compile Include="Model\ShoppingCart.cs" />
     <Compile Include="Model\Selling.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
