--- a/CrmCompModelShop/Crm.BL/Crm.BL.csproj
+++ b/CrmCompModelShop/Crm.BL/Crm.BL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\AbstractPerson.cs" />
+    <Compile Include="Model\Cart.cs" />
     <Compile Include="Model\CashDesk.cs" />
     <Compile Include="Model\Cheque.cs" />
     <Compile Include="Model\CrmContext.cs" />
