--- a/CrmCompModelShop/Crm.BLTests/Crm.BLTests.csproj
+++ b/CrmCompModelShop/Crm.BLTests/Crm.BLTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Model\CashDeskTests.cs" />
+    <Compile Include="Model\ShopComputerModelTests.cs" />
     <Compile Include="Model\ShoppingCartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
